syntax = "proto3";
package gateway;
option go_package = "github.com/chingkamhing/grpc-gateway/lib/tm2-proto-gateway-go;tm2_proto_gateway_go";

import "user/user_struct.proto";
import "company/company_struct.proto";

// Gateway service

message UserDetail {
    user.UserInfo User = 1;
    company.CompanyInfo Company = 2;
}
